# components/abouts/model.go
@@ -11,5 +11,5 @@ type Abouts struct {
 	Desc      string             `json:"desc" bson:"desc,omitempty" form:"desc" query:"desc"`
 	Image     string             `json:"image,omitempty" bson:"image,omitempty" form:"image" query:"image"`
 	CreatedAt time.Time          `json:"createdAt,omitempty" bson:"created_at,omitempty"`
-	UpdatedAt time.Time          `json:"updtedAt,omitempty" bson:"updated_at,omitempty"`
+	UpdatedAt time.Time          `json:"updatedAt,omitempty" bson:"updated_at,omitempty"`
 }
