# docs/swagger.yaml
@@ -1,11 +1,188 @@
 basePath: /api
+definitions:
+  abouts.Abouts:
+    properties:
+      _id:
+        type: string
+      createdAt:
+        type: string
+      desc:
+        type: string
+      image:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  users.Users:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
 host: 127.0.0.1:8585
 info:
   contact: {}
   description: Conduit API
   title: Conduit API
   version: "1.0"
-paths: {}
+paths:
+  /abouts:
+    get:
+      consumes:
+      - application/json
+      description: get most recent info about
+      operationId: get-abouts
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/abouts.Abouts'
+      summary: Get recent info about
+      tags:
+      - Abouts
+    post:
+      consumes:
+      - application/json
+      description: Create an info for page about
+      operationId: create-abouts
+      parameters:
+      - description: Info about you want to create
+        in: body
+        name: about
+        required: true
+        schema:
+          $ref: '#/definitions/abouts.Abouts'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              allOf:
+              - type: string
+              - properties:
+                  desc:
+                    type: string
+                  image:
+                    type: string
+                  title:
+                    type: string
+                type: object
+            type: array
+      summary: Create an info for page about
+      tags:
+      - Abouts
+  /abouts/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an about info
+      operationId: delete-about
+      parameters:
+      - description: ID of the about
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/abouts.Abouts'
+      summary: Delete an about info
+      tags:
+      - Abouts
+    get:
+      consumes:
+      - application/json
+      description: Find info abouts by ID
+      operationId: find-abouts
+      parameters:
+      - description: ID of the about to get
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/abouts.Abouts'
+      summary: Find info abouts by ID
+      tags:
+      - Abouts
+    put:
+      consumes:
+      - application/json
+      description: Update an info for page about
+      operationId: update-about
+      parameters:
+      - description: ID of the about to get
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Info about you want to create
+        in: body
+        name: about
+        required: true
+        schema:
+          $ref: '#/definitions/abouts.Abouts'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/abouts.Abouts'
+      summary: Update an info for page about
+      tags:
+      - Abouts
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Login for existing user
+      operationId: login
+      parameters:
+      - description: Credentials to use
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/users.Users'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              allOf:
+              - type: string
+              - properties:
+                  access_token:
+                    type: string
+                  refresh_token:
+                    type: string
+                type: object
+            type: array
+      summary: Login for existing user
+      tags:
+      - user
 schemes:
 - http
 - https
